--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "lint": "eslint --fix 'src/**/*.ts'",
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "test": "jest"
   },
@@ -42,6 +43,8 @@
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
     "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
