--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "dist/es5/index.js",
   "scripts": {
     "lint": "eslint --fix 'src/**/*.ts'",
+    "prepublish": "npm run build",
     "prebuild": "rimraf dist",
     "build": "run-p 'tsc:*'",
     "tsc:main": "tsc -p tsconfig.json",
@@ -35,21 +36,24 @@
     "url": "git+https://github.com/hisho/state.git"
   },
   "keywords": [],
-  "author": "Hisho <hisho.web@gmail.com> (https://twitter.com/__hisho__)",
+  "author": "hisho",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/hisho/state/issues"
   },
   "homepage": "https://github.com/hisho/state#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "eslint": "^7.19.0",
+    "@types/eslint": "^7.2.6",
+    "@types/node": "^14.14.30",
+    "@types/rimraf": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.0",
+    "ts-jest": "^26.5.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.5"
   }
 }
