--- a/package.json
+++ b/package.json
@@ -2,16 +2,9 @@
   "name": "@hisho/state",
   "version": "1.0.0",
   "description": "A simple state library",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "module": "dist/es5/index.js",
+  "main": "index.ts",
   "scripts": {
     "lint": "eslint --fix 'src/**/*.ts'",
-    "prepublish": "npm run build",
-    "prebuild": "rimraf dist",
-    "build": "run-p 'tsc:*'",
-    "tsc:main": "tsc -p tsconfig.json",
-    "tsc:esm5": "tsc -p tsconfig.es5.json",
     "test": "jest"
   },
   "jest": {
@@ -28,7 +21,7 @@
       }
     },
     "testMatch": [
-      "**/test/**/*.test.ts"
+      "**/__tests__/**/*.test.ts"
     ]
   },
   "repository": {
@@ -43,17 +36,7 @@
   },
   "homepage": "https://github.com/hisho/state#readme",
   "devDependencies": {
-    "@types/eslint": "^7.2.6",
-    "@types/node": "^14.14.30",
-    "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
     "jest": "^26.6.3",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.1"
   }
 }
